test/tests/stages/7_compound_statements/valid/similar_var_names.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[107]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  int
  identifier(result)
  ;
  int
  identifier(a1)
  =
  const int(1)
  ;
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  int
  identifier(a1)
  =
  const int(2)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  {
  int
  identifier(a)
  =
  const int(20)
  ;
  identifier(result)
  =
  identifier(a)
  ;
  {
  int
  identifier(a)
  ;
  identifier(a)
  =
  const int(5)
  ;
  identifier(result)
  =
  identifier(result)
  +
  identifier(a)
  ;
  }
  }
  }
  }
  }
  }
  }
  }
  }
  }
  identifier(result)
  =
  identifier(result)
  +
  identifier(a1)
  ;
  }
  return
  identifier(result)
  +
  identifier(a1)
  ;
  }
