test/tests/stages/7_compound_statements/invalid_parse/extra_brace.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(0)
  )
  {
  return
  const int(1)
  ;
  }
  }
  return
  const int(2)
  ;
  }
